--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-interface-v2",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "react": "^16.8.3",
@@ -22,5 +22,18 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nigel-marshal/react-data-table.git"
+  },
+  "author": "Nigel Marshal",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nigel-marshal/react-data-table/issues"
+  },
+  "homepage": "https://github.com/nigel-marshal/react-data-table#readme"
 }
